--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -7,5 +7,57 @@ body
   text-align: center
   box-sizing: border-box
 
-h1
-  font-size: 45px
+.wrapper
+  margin: 0 auto
+  width: 800px
+
+  .wrapper__title
+    font-size: 45px
+    margin: 0
+
+
+  .scores
+    display: grid
+    grid-template-columns: 30% auto 40%
+    margin-bottom: 20px
+
+  .game
+    display: grid
+    grid-template-columns: 70% auto
+    justify-items: center
+    align-items: center
+
+    .game-pad
+      display: grid
+      grid-template-columns: 200px 200px
+      justify-content: center
+      gap: 20px
+
+      .pad
+        height: 200px
+        width: 200px
+        outline: none
+        border: 0
+        cursor: pointer
+
+      .pad-green
+        background-color: rgb(0,128,0)
+        border-top-left-radius: 200px
+
+      .pad-red
+        background-color: rgb(255, 0, 0)
+        border-top-right-radius: 200px
+
+      .pad-yellow
+        background-color: rgb(255, 255, 0)
+        border-bottom-left-radius: 200px
+
+      .pad-blue
+        background-color: rgb(0,0,255)
+        border-bottom-right-radius: 200px
+
+    .game-start
+      height: 50px
+      width: 160px
+      border-radius: 30px
+      cursor: pointer
