--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -6,6 +6,7 @@ body
   font-weight: normal
   text-align: center
   box-sizing: border-box
+  background-color: rgb(204,255,153)
 
 .wrapper
   margin: 0 auto
@@ -37,7 +38,7 @@ body
         height: 200px
         width: 200px
         outline: none
-        border: 0
+        border: 1px solid #ccc
         cursor: pointer
 
       .pad-green
